Fix: card title on mobile

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -33,9 +33,11 @@ p {
   p {
     font-size: 3rem;
   }
-  .card-title {
-  text-align: left;
 }
+@media screen and (min-width: 570px) {
+  .card-title {
+    text-align: left;
+  }
 }
 @media screen and (max-width : 570px) {
   h2 {
